- added possibility to enable/disable gzip compression (Thorsten)
- added possibility for inactive, hidden categories (Thorsten)
- added possibility to disable registraton (Thorsten)
- added possibility to allow anonymous downloads (Thorsten)
- added possibility to override user passwords by admin (Thorsten)
- added possibility to reset votings and visits (Thorsten)
- added tag management frontend (Thorsten)
- added full support for SQLite3 (Peter Kehl)
- added control for meta robots handling (Thorsten)
- added configuration for auto-activation of new users (Christopher Andrews)
- added support for SMTP (Christopher Andrews)
- added bundled Typeahead.js (Thorsten)
- added support for custom headers and footers in PDF exports (Thorsten)
- added support for language specific open questions (Thorsten)
- added moderator groups to categories (Thorsten)
- added FAQ overview page (Thorsten)
- extended REST/JSON API (Thorsten)
- code base PSR-1 and PSR-2 compatible (Thorsten)
- updated bundled Symfony ClassLoader to version 2.6.10 (Thorsten)
- updated bundled jQuery to version 1.11.2 (Thorsten)
- updated bundled Bootstrap to version 3.3.5 (Thorsten)
- updated bundled Font Awesome to version 4.3.0 (Thorsten)
- updated bundled Modernizr to version 2.8.3 (Thorsten)
- updated bundled TinyMCE to version 4.2.5 (Thorsten)
- updated bundled SwiftMailer to version 5.4.1 (Christopher Andrews, Thorsten)
- updated bundled Parsedown to version 1.5.3 (Jerry van Kooten, Thorsten)
- updated bundled HighlightJS to version 8.6.0 (Thorsten)
- removed bundled SyntaxHighlighter (Thorsten)
- dropped support for ext/mysql (Thorsten)
- dropped support for SQLite2 (Thorsten)
- dropped support for Zeus Webserver, IIS 6 and lighttpd (Thorsten)

Version 2.8.25 - 2015-10-
- added American English translation (Stewart Day)
- updated Japanese translation
- updated Brazilian Portuguese translation
- updated Italian translation (Amedeo Fragai)
- fixed some minor bugs (Thorsten)
