@@ -1197,3 +1197,4 @@ $LANG_CONF['main.enableMarkdownEditor'] = array('checkbox', 'Aktivierung des Mar
 // added v2.9.0-beta - 2015-09-27 by Thorsten
 $PMF_LANG['faqOverview'] = 'FAQ Übersicht';
 $PMF_LANG['ad_dir_missing'] = 'Der Ordner %s fehlt.';
+$LANG_CONF['main.enableSmartAnswering'] = array('checkbox', 'Aktivierung von Smart Answering bei Benutzerfragen<br>(Standard: aktiviert)');
